# aesthetic

./: .gitignore  Cargo.toml  README.md  response.json
crates/aesthetic/: Cargo.toml
crates/aesthetic/src/: app.rs  config.rs  credentials.rs  file_system.rs  main.rs
crates/exchanges/kraken/: Cargo.toml
crates/exchanges/kraken/src/: client.rs
crates/trading_api/: Cargo.toml
crates/trading_api/src/: api.rs  client.rs  connection.rs  credentials.rs  errors.rs  exchange.rs  interfaces.rs  lib.rs  response.rs
exchanges/kraken/: Cargo.toml
exchanges/kraken/src/: auth.rs  client.rs  lib.rs  private_api.rs  signature.rs
integrations/kraken/: Cargo.toml
integrations/kraken/src/: http_client.rs  lib.rs  private_api.rs  public_api.rs  schema.rs
libs/exchanges/bitmex/: Cargo.toml
libs/exchanges/kraken/: Cargo.toml
libs/exchanges/kraken/src/: auth.rs
libs/trading_api/src/: api.rs  client.rs  credentials.rs
