# [[bin]]
# path = "crates/aesthetic/src/main.rs"

[workspace]
members = ["crates/*", "crates/exchanges/bitmex", "crates/exchanges/kraken"]
exclude = ["crates/exchanges"]

[workspace.dependencies]

[workspace.package]
version = "0.0.1"
authors = ["Patrick Tluszcz"]
description = "VIM for your trading"