[package]
name = "kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# WORKSPACE MEMBERS
trading_api =  { path = "../../crates/trading_api" }

# EXTERNAL
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_qs = "0.11.0"
base64 = "0.21.0"
serde_urlencoded = "0.7.1"
sha2 = "0.10.6"
ring = "0.16.20"


